Save additions to the state transitions method before fixing memory problems